tests/neg/i14432d.check
-- Error: tests/neg/i14432d.scala:17:45 --------------------------------------------------------------------------------
17 |    val mFoo = summon[Mirror.Of[example.Foo]] // error
   |                                             ^
   |no given instance of type deriving.Mirror.Of[example.Foo] was found for parameter x of method summon in object Predef
